fix: no jump when hiding progress

--- a/styles/layout/_app.scss
+++ b/styles/layout/_app.scss
@@ -22,6 +22,10 @@ input {
   #controls {
     margin: 80px auto 110px;
   }
+
+  #main {
+    min-height: 300px;      
+  }
 }
 
 @media (orientation: landscape) {
@@ -35,6 +39,7 @@ input {
     align-items: center;
     max-width: 460px;             
     margin: 0 auto 52px;
+    min-height: 140px;          
   }
 
   #controls {
