--- a/styles/main.css
+++ b/styles/main.css
@@ -30,6 +30,9 @@ input {
   #controls {
     margin: 80px auto 110px;
   }
+  #main {
+    min-height: 300px;
+  }
 }
 @media (orientation: landscape) {
   #app {
@@ -41,6 +44,7 @@ input {
     align-items: center;
     max-width: 460px;
     margin: 0 auto 52px;
+    min-height: 140px;
   }
   #controls {
     max-width: 280px;
